# commonroad-scenario-factory

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yaml  pyproject.toml  requirements.txt
backup/: generate_interactive_senarios.py  installation_guide_scenariofactory.md  installation_guide_scenariofactory.txt
ci/: .gitlab-ci.yml  Dockerfile
docs/: debug.md  development.md  index.md  ots.md  pipeline.md  usage.md
docs/guides/: custom_scenario_generation_pipeline.md  generate_scenarios.md  globetrotter.md  index.md
docs/reference/: cli.md  ego_vehicle_selection.md  ots.md  pipeline.md  scenario_generation.md  simulation.md
docs/reference/api/: builder.md  ego_vehicle_selection.md  globetrotter.md  metrics.md  pipeline.md  pipeline_steps.md  pipelines.md  scenario_container.md  simulation.md  (+1 more)
docs/tutorials/: create_pipeline_step.md  debug.md  index.md  pipeline.md
example_files/: BEL_Putte-8.xml  DEU_Cologne-29.xml  DEU_Hhr-1.xml  DEU_Munich-1.xml  HRV_Pula-27.xml  HRV_Pula-3.xml  USA_Lanker-1.xml  ZAM_Tjunction-1.xml  ZAM_Zip-1.xml
example_files/commonroad/: USA_Lanker-1.xml
example_files/osm/: README.md  bounding_box_coordinates.py  campus_garching.osm  cities_selected.csv
files/: 0_cities_selected.csv  1_bounding_box_coordinates.py  2_osm_map_extraction.py  3_conversion_to_commonroad.py  4_globetrotter.py  5_analyser.py  5_scenario_generation.py  9_verification.py  cities_selected.csv  dummy.py  n1_bounding_box_coordinates.py  n2_osm_map_extraction.py  n4_globetrotter.py  n5_scenario_generation.py  script_1_bounding_box_coordinates.py  script_2_osm_map_extraction.py  script_3_conversion_to_commonroad.py  script_4_globetrotter.py  script_5_scenario_generation.py  script_6_visualize.py  usage.py
files/commonroad/: HRV_Pula-27.xml
files/input_maps/: README.md
files/osm/: 0_cities_selected.csv  1_bounding_box_coordinates.py  2_map_extraction.py
interactive_scenarios/: default.py
resources/paper/: C-DEU_MONAMerge-2_1_T-299.xml  C-DEU_MONAWest-2_1_T-299.xml  frame_factors.py
resources/paper_accepted/: DEU_AachenBendplatz-1_90_T-300.xml  DEU_AachenHeckstrasse-1_30300_T-600.xml  DEU_LocationCLower6-1_60_T-300.xml  DEU_MONAMerge-2_1_T-300.xml  DEU_MONAMerge-2_2_T-300.xml  DEU_MONAWest-2_1_T-300.xml  DEU_MONAWest-2_2_T-300.xml  README.md
scenario_factory/: cli.py  conversion_to_commonroad.py  cr_scenario_factory.py  ego_vehicle_selector.py  enums.py  generate_senarios.py  osm.py  osm_map_extraction.py  ots.py  pipeline.py  pipelines.py  scenario_checker.py  scenario_config.py  scenario_container.py  scenario_database.py  scenario_generation.py  scenario_types.py  scenario_util.py  sumo.py  tags.py  utils.py
scenario_factory/Visualization_steps/: Visulisation_renderer.py  visualization_renderer.py
scenario_factory/builder/: __init__.py  core.py  dynamic_obstacle_builder.py  intersection_builder.py  lanelet_network_builder.py  planning_problem_builder.py  scenario_builder.py  trajectory_builder.py
scenario_factory/config_files/: cr2sumo_map_config.py  scenario_config.py  sumo_config.py
scenario_factory/ego_vehicle_selection/: __init__.py  criterions.py  filters.py  selection.py  utils.py
scenario_factory/globetrotter/: __init__.py  city.py  clustering.py  filter.py  globetrotter_io.py  intersection.py  location.py  osm.py  plotting.py  region.py  traffic_sign_country_conversion.py
scenario_factory/metrics/: __init__.py  _crime_metric.py  _general_scenario_metric.py  _waymo_metric.py  crime.py  general_scenario_metric.py  output.py  single_scenario.py  waymo.py  waymo_metric.py
scenario_factory/pipeline/: __init__.py  bounding_box_coordinates.py  context.py  conversion_to_commonroad.py  generate_scenarios.py  osm_map_extraction.py  pipeline.py  pipeline_context.py  pipeline_executor.py  pipeline_step.py  run_globetrotter.py  util.py  utils.py
scenario_factory/pipeline_steps/: __init__.py  cities.py  general_scenario_metric.py  globetrotter.py  metrics.py  motion_planning.py  osm.py  scenario_generation.py  simulation.py  single_scenario_metrics.py  sumo.py  utils.py  visualization_renderer.py  visualize.py  waymo_metric.py  waymo_metrics.py
scenario_factory/scenario_features/: __init__.py  assign_tags.py  features.py
scenario_factory/simulation/: config.py  ots.py  sumo.py  utils.py
scenario_factory/utils/: __init__.py  _align.py  _crop.py  _obstacle.py  _scenario.py  _types.py  align.py  obstacle.py  scenario.py
scenario_factory/visualization_steps/: visualization_renderer.py
scripts/: _old_generate_noninteractive_scenarios.py  assign_tags.py  autocorrect_intersections.py  cli.py  configHighway.py  crime.py  delay_eval.py  evaluate_solutions.py  extract_opendrive_maps.py  fix_intervals.py  general_scenario_metric.py  generate_cr_scenarios_multicore.py  generate_senarios.py  globetrotter_usage.py  paper_mona_merge.py  plot_scenario.py  rename_cr_scenarios.py  repair_maps.py  resimulate_delay.py  scenario_configHighWay.py  scenario_statistics.py  sims_paper.py  single_scenario_metrics.py  sumo_sims_paper.py  test.py  usage.py  use_case.py  warm-up.py  warm-up_eval.py  waymo.py  waymo_metric.py
tests/: __init__.py  conftest.py  helpers.py  hide_test_boran.py  interface.py  test_first.py  test_pipeline.py  test_pipeline_steps.py  test_scenario_checker.py  test_scenario_generation.py  utility.py
tests/automation/: datasets.py  mark.py  marks.py  validation.py
tests/datasets/: interface.py
tests/helpers/: lanelet_network.py  obstacle.py  pipeline.py
tests/integration/: cities_selected_test.csv  test_metrics.py  test_osmium_generator_changes.py  test_pipelines.py  test_scenario_features.py  test_scenario_generation.py
tests/resources/: __init__.py  interface.py
tests/unit/: test_ego_vehicle_selection.py  test_ego_vehicle_selector.py  test_globetrotter.py  test_ots.py  test_pipeline.py  test_pipeline_steps.py  test_region.py  test_scenario_checker.py  test_scenario_container.py  test_scenario_features.py  test_scenario_generation.py  test_scenario_util.py  test_tags.py  test_utils.py
(+75 files in other folders)
